--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 @import './style/shoppingCart.scss';
 
 html {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin: 0px;
   padding: 0px;
 }
